force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/cgcloud__Payment_Tactic_Product_Manual_Input__c.object-meta.xml
<CustomObject>
    <description>Contains the manual inputs for the payment tactic specific manual inputs.</description>
    <label>Claim Tactic Product Manual Input</label>
    <nameField>
        <displayFormat>PTPMI-{00000000}</displayFormat>
        <label>Claim Tactic Product Manual Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Tactic Product Manual Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>