force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Effective_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Effective_Total__c</fullName>
    <description>Effective Total Value.</description>
    <label>Effective Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>