force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Obsolete__c</fullName>
    <description>Obsolete flag of the manual input entry.</description>
    <label>Obsolete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Non Obsolete</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Obsolete since removed</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Obsolete since overridden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>