force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment__c</fullName>
    <description>Related payment.</description>
    <label>Claim</label>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Claim Tactic Product Manual Inputs</relationshipLabel>
    <relationshipName>Payment_Tactic_Product_Manual_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>