force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Payment_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment/Tactic combination for which the manual input was entered.</description>
    <label>Claim Tactic</label>
    <referenceTo>cgcloud__Payment_Tactic__c</referenceTo>
    <relationshipLabel>Claim Tactic Product Manual Inputs</relationshipLabel>
    <relationshipName>Payment_Tactic_Product_Manual_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>