force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product for which the manual input was entered. Since the manual input can happen on any level (also total level) the value for this value can be null.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Tactic Product Manual Inputs</relationshipLabel>
    <relationshipName>Payment_Tactic_Product_Manual_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>