force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Input order of the manual inputs, it will be incremented by 1 for each new entry for a payment/tactic combination.</description>
    <label>Sort</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>