force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that did the manual input.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Tactic_Product_Manual_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>