force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/validationRules/cgcloud__Negative_Payment_Not_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Negative_Payment_Not_Positive_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(cgcloud__Payment__r.cgcloud__Payment_Amount__c &lt; 0,cgcloud__Value__c &gt; 0)</errorConditionFormula>
    <errorMessage>The amount can&apos;t be positive.</errorMessage>
</ValidationRule>