force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/validationRules/cgcloud__Positive_Payment_Not_Negative_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Positive_Payment_Not_Negative_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(cgcloud__Payment__r.cgcloud__Payment_Amount__c &gt; 0,cgcloud__Value__c &lt;0)</errorConditionFormula>
    <errorMessage>The amount can&apos;t be negative.</errorMessage>
</ValidationRule>