force-app/main/default/objects/cgcloud__Payment_Tactic_Product_Manual_Input__c/validationRules/cgcloud__Related_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Related_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Payment_Tactic__r.cgcloud__Payment__r.Id &lt;&gt; cgcloud__Payment__r.Id</errorConditionFormula>
    <errorMessage>Related Payment must be the same that Payment related to Payment Tactic.</errorMessage>
</ValidationRule>